--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
     <script src="./Exp.js"></script>
 </head>
 <body>
-    <div class="header">
-        <div class="top">
+    <div class="header" id="header">
+        <div class="top" exp-click="open">
           <a href="#" class="navLink">&#9776;</a>
         </div>
         
-        <div class="nav">
+        <div class="nav" exp-ref="nav">
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Store</a></li>
@@ -33,28 +33,28 @@
       </div>
 <script>
     var banner = new Exp({
-      recommendations: {
-        products: {
-          id: "123",
-          total: 4,
-          loadingKey: 'rcmLoading'
+      backdrop: true,
+      el: '#header',
+      methods: {
+        open: function() {
+          this.$refs.nav.style.height = 'auto'
+          var height = this.$refs.nav.offsetHeight;
+          this.$refs.nav.style.height = '0px'
+          this.$anim(this.$refs.nav, {height: height}, 0.4)
         }
-      },
-      data: {
-        rcmLoading: false
       }
     });
-    document.querySelector('.navLink').addEventListener('click', function(e) {
-        e.preventDefault();
-        var nav = document.querySelector('.nav')
-        nav.style.height = 'auto'
-        var height = nav.offsetHeight;
-        nav.style.height = '0px'
-        banner.$anim(nav, {height: height}, 0.4)
-    })
+    // document.querySelector('.navLink').addEventListener('click', function(e) {
+    //     e.preventDefault();
+    //     var nav = document.querySelector('.nav')
+    //     nav.style.height = 'auto'
+    //     var height = nav.offsetHeight;
+    //     nav.style.height = '0px'
+    //     banner.$anim(nav, {height: height}, 0.4)
+    // })
 </script>
 <style>
-    * {
+* {
   margin: 0;
   padding: 0;
   border: 0;
@@ -73,6 +73,7 @@ body {
   background: #ff8330;
   width: 500px;
   margin: 50px auto;
+  position: relative;
 }
 
 .header .top {
