--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     }
   </style>
   <script>hljs.initHighlightingOnLoad();</script>
-  <script src="exp.js"></script>
+  <script src="./exp.js"></script>
 </head>
 <body>
   <div class="page">
