Fix typo in documentation

--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@ JavaScript:
     <pre><code>var banner3 = new Exp({
   context: this,
   data: {
-    seen: false
+    seen: true
   },
   branded: false
 })</code></pre>
