--- a/src/index.html
+++ b/src/index.html
@@ -106,20 +106,21 @@ return {
     Output:
     <div class="output">
         <div id="banner1">
-          <p exp-html="message"></p>
+          <p exp-bind="message"></p>
         </div>
     </div>
     <script>
       var banner = new Exp({
         el: "#banner1",
         data: {
-          message: "<h1>Hello world!</h1>",
+          message: "Hello world!",
         },
         branded: false
       })
     </script>
     <p>Congratulations, you have made your first Exp app! <code>exp-bind</code> makes sure that the data and DOM are linked, and everything is now <strong>reactive</strong>. How do we know? Open your browser's JavaScript console (right now, on this page) and set <code>banner.message</code> to a different value. You should see the rendered example above update accordingly.</p>
     <p>The <code>branded: false</code> settings disables Powered by Exponea branding that is added by default. For now let's keep it off.</p>
+    <p>Note that <code>exp-bind</code> changes only text. You can use <code>exp-html</code> to set HTML of the element.</p>
     <p>In addition to text binding, we can also bind element attributes like this:</p>
     HTML:
     <pre><code>&lt;div&gt;
