Remove single quotes, fix hasOwnProperty and overall unify the code

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     <h2 id="getting-started">Getting Started</h2>
     <blockquote>The official guide assumes intermediate level knowledge of HTML, CSS, and JavaScript. If you are totally new to frontend development, it might not be the best idea to jump right into a framework as your first step - grasp the basics then come back! Prior experience with other frameworks helps, but is not required.</blockquote>
     <p>The easiest way to try out Exp is by duplicating one of the default web-layer templates or you can check out this <a href="#" target="_blank">JSFiddle Hello World example</a>. Or you can test it locally by <a href="https://gist.githubusercontent.com/hackal/a4cd7481c046f53719a099ee8d5e3d0f/raw/04908eb8b32644f3f1cf4439e3fb663a6f302457/index.html" target="_blank">creating <code>index.html</code></a> and include Exp with:</p>
-    <pre><code>&lt;script src="https://exp-framework.firebaseapp.com/Exp.js"&gt;&lt;/script&gt;</code></pre>
+    <pre><code>&lt;script src="https://exp-framework.exponea.com/exp.js"&gt;&lt;/script&gt;</code></pre>
     <p class="is-small">Disclaimer: please do not use the script tag above for production purposes.</p>
     <h2 id="installation">Installation</h2>
     <p>At the moment Exp framework can be added to clients website in several ways:</p>
